package com.edua.beeduasystem.domain.model.library;

public enum LibraryContentStatus { PRIVATE, SUBMITTED, APPROVED, REJECTED }
