package com.edua.beeduasystem.domain.model.library;

public enum LibraryContentType { LESSON_PLAN, SLIDE_DECK, TEST, SIMULATION }
